# eatcoffee

./: .gitignore  Cargo.toml  README.md
examples/triangle/: triangle.rs  vertex.wgsl
src/: buffer.rs  camera.rs  canvas.rs  display.rs  init.rs  lib.rs  light.rs  main.rs  model.rs  pipeline.rs  setup.rs  shader.wgsl  shader_canvas.rs  texture.rs
src/examples/stencil_triangles/: main.rs  shader.wgsl
src/res/: shader.frag.wgsl  shader.vert.wgsl  shader.wgsl
src/setup/: canvas.rs  display.rs  mod.rs  pipeline.rs
