[package]
name = "eatcoffee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.0"
winit = "0.28.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
anyhow = "1.0.68"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
image = "0.24.5"
wgpu-subscriber = "0.1.0"
